abc338/B/er
main.cpp: In function 'void sub()':
main.cpp:682:12: error: 'c' was not declared in this scope
  682 |         ff(c);
      |            ^
